5章まで加筆終了

--- a/sample.tex
+++ b/sample.tex
@@ -57,7 +57,7 @@ and tries to support the combination of existing tools displaying destination, a
 
 % 英文キーワード(5個程度をコンマ(,)で区切って羅列する)
 \begin{ekeyword}
-Travel, making schedule, Traveler's Notebook, moving transportation, moving time
+Travel, Making schedule, Traveler's Notebook, Moving transportation, Moving time
 \end{ekeyword}
 
 %--------------------------------------------------------------------
@@ -92,28 +92,25 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 % \includegraphics[width=??cm]{hoge.eps} % 図(EPS形式)を読み込む場合
 
 \section{背景}
-近年の日本では国内の観光旅行者が減少傾向にあり(図\ref{kokunai})\cite{kokunaitrip}，海外からの観光客を取り込む方向性にシフトしている．
+近年の日本では国内の観光旅行者が減少傾向にあり，海外からの観光客を取り込む方向性にシフトしている．日本交通校舎がまとめたデータ\cite{kokunaitrip}によると，2005年には227百万人回であったものの翌年から減少傾向にあり，2014年には16万人回になっており9年で約30\%減少している(図\ref{kokunai})．原因として国内の人口の減少や景気の低迷ということが挙げられる．
 
 \begin{figure}[htpb]
 \begin{center}
-\includegraphics[scale=0.56]{kokunaitrip.eps}
+\includegraphics[scale=0.55]{kokunaitrip.eps}
 \end{center}
 \caption{日本人の国内宿泊観光・レクリエーションにおける延べ旅行者数の推移および伸び率}
 \label{kokunai}
 \end{figure}
 
-原因として国内の人口の減少や景気の低迷ということが挙げられる． また，2008年から旅行業者，旅行代理業者ともに減少している(図\ref{gyosya})\cite{ryokougyokai}．
+また，2008年から旅行業者，旅行代理業者ともに減少している．日本旅行業者会のまとめたデータ\cite{ryokougyokai}によると旅行業者数計は2008年は9714であったが2013年に9308になっており，約4\%減少している．同じく旅行代理業者も2008年には892であったが2013年には837となっており，6\%減少している(図\ref{gyosya})．国内旅行者は旅行業者を通じて旅行するのではなく，各々プランを立てて旅行する傾向になりつつあると考えられる．
 
 \begin{figure}[htpb]
 \begin{center}
-\includegraphics[scale=0.67]{tripgyosya.eps}
+\includegraphics[scale=0.68]{tripgyosya.eps}
 \end{center}
 \caption{旅行業者数の推移}
 \label{gyosya}
 \end{figure}
-
-
-旅行業者の取り扱い額も減少傾向にあり，国内旅行者は旅行業者を通じて旅行するのではなく，各々プランを立てて旅行する傾向になりつつあると考えられる．
 
 
 \section{問題点} % sectionのタイトル
@@ -132,7 +129,7 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \section{研究目的・目標}
 
 本研究の目的は観光スケジュール作成を支援することである．この支援には二種類あり効率的に作成すること，楽しみながら作成することである．これらは必ずしも同時に満たす必要はなく，それぞれを独立に考える．その理由としては例を挙げると非効率的に時間をかけて旅行の計画を作成することに楽しさを覚える人もいるためである．よって楽しさと効率性の両面での支援を実現する必要がある．\\
-　本研究の目標は「目的地と移動手段・時間が表示される旅のしおり作成ツールを開発する」である．
+　本研究の目標は「目的地と移動手段・時間が表示される旅のしおり作成ツールを開発する」である．%もうちょいなんか
 
 
 %--------------------------------------------------------------------
@@ -140,13 +137,14 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 
 \section{CT-Planner}
 
-本研究の関連研究としてWebサービスによる対話型の旅行計画支援ツール「CT-Planner」\cite{CTPlanner}がある(図2.1)．
+本研究の関連研究としてWebサービスによる対話型の旅行計画支援ツール「CT-Planner」\cite{CTPlanner}がある(図\ref{LCT})．
 
 \begin{figure}[htpb]
 \begin{center}
 \includegraphics[scale=0.34]{ctplannner.eps}
 \end{center}
 \caption{CT-Planner}
+\label{LCT}
 \end{figure}
 
 このツールは不慣れな土地での旅行計画作成に不安を抱く個人旅行者を対象としたものであり，函館や横浜などの都市を選択し「のんびり歩こう」「文化を知りたい」等の旅行スタイルの中から自分の嗜好に合ったものを選択すると，選択した旅行スタイルに応じた観光スポットを巡る旅行プランが自動的に作成される．旅行プラン作成後もユーザは行きたい観光スポットを適宜変更でき「穴場好き」か「有名所好き」等の特性を選ぶことでユーザの嗜好に合った旅行プランに変更できる．
@@ -157,13 +155,13 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \section{既存の旅のしおり作成ツール}
 
 \subsection{電子的な旅のしおり作成ツールの例}
-電子的な旅のしおり作成ツールには様々なものがあるが，代表して「ポケたび」\cite{poketrip}というツールについて記述する．ポケたびとはJTBが提供している旅のしおり作成ツールである．日本全国の観光スポットを検索することができ，そこから旅行プランを作成できる．またマルチデバイスに対応しておりPCの他にスマートフォンのアプリも存在する．
+電子的な旅のしおり作成ツールには様々なものがあるが，代表して「ポケたび」\cite{poketrip}というツールについて記述する．ポケたびとはJTBが提供している旅のしおり作成ツールである．日本全国の観光スポットを検索することができ，検索したスポットから旅行プランを作成できる．またマルチデバイスに対応しておりPCの他にスマートフォンのアプリも存在する．
 
 \subsection{紙媒体の旅のしおり作成ツールの例}
-紙媒体の旅のしおり作成ツールには様々なものがあるが，代表して「TRAVELER'S notebook」\cite{traver}というツールについて記述する．このツールはTRAVELER'S COMPANYが販売する旅行の予定を記入できる手帳である．シンプルなデザインで旅行の予定や旅行中のことを自由に書き込むことができるスタイルとなっている．
+紙媒体の旅のしおり作成ツールには様々なものがあるが，代表して「TRAVELER'S notebook」\cite{traver}というツールについて記述する．このツールはTRAVELER'S COMPANYが販売する旅行の予定を記入できる手帳である．シンプルなデザインで旅行の予定や旅行中のことを自由に書き込むことができるスタイルとなっている．例えば旅旅先にあるスタンプを手帳にも押すことや，旅先で見つけた花びらをしおりに挟むという使い方も可能になる．
 
 \section{既存の乗り換え案内ツール}
-既存の乗り換え案内ツールには様々なものがあるが，代表して「Yahoo!路線情報: 乗り換え案内」\cite{yahoo}というツールについて記述する．このツールはYahooが提供している，電車等の乗り換え案内を表示するツールである．このツールは，出発駅と到着駅を入力すると該当する路線や時刻や乗り換え案内情報を自動で表示する(図\ref{Lyahoo})．日時または曜日と時刻を指定することでより詳細に乗り換え案内が表示される．列車の乗り換え案内以外にも飛行機のや列車の運航状況や時刻表，路線図なども調べることが可能である．
+既存の乗り換え案内ツールには様々なものがあるが，代表して「Yahoo!路線情報: 乗り換え案内」\cite{yahoo}というツールについて記述する．このツールは「Yahoo! JAPAN」内にある，電車等の乗り換え案内を表示するツールである．このツールは，出発駅と到着駅を入力すると該当する路線や時刻や乗り換え案内情報を自動で表示する(図\ref{Lyahoo})．日時または曜日と時刻を指定することでより詳細に乗り換え案内が表示される．鉄道の乗り換え案内以外にも飛行機のや鉄道の運航状況，駅状況，時刻表，路線図なども調べることが可能である．
 
 \begin{figure}[htpb]
 \begin{center}
@@ -178,7 +176,8 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 %--------------------------------------------------------------------
 \chapter{研究のアプローチ}% 3章のタイトル
 
-本研究では始めに既存の旅のしおりの利点，問題点の調査を行った．次に旅行計画の作成についての考え方を知るために旅行計画作成に関するアンケートを行った．また，ツールを作成するうえで必要になる機能を調査するために予備実験を行った．その後，作成するツールの設計・実装を行う．
+本研究では始めに既存の旅のしおりにはどのようなツールが存在するか，それらの利点，問題点の調査を行った．また旅行計画の作成方法や利用するツール，考え方を知るためにアンケート調査を行った．
+また，ツールを作成するうえで必要になる機能を調査するために予備実験を行った．その後，作成するツールの設計・実装を行う．
 
 %\section{提案する言語FUNの特徴}
 
@@ -204,15 +203,35 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 %--------------------------------------------------------------------
 \chapter{調査}% 4章のタイトル
 
-既存でどのようなツールが存在するかを知るために既存の旅のしおり作成ツールの調査を行った．また旅行計画に対する考え方を知るためにアンケート調査を行った．
+既存にはどのようなツールが存在するかを知るために既存の旅のしおり作成ツールの調査を行った．また旅行計画の作成方法や利用するツール，考え方を知るためにアンケート調査を行った．
 
 
 \section{既存の旅のしおり作成ツールの調査}
 
 既存の旅のしおりは大きく分けて「観光スケジュールを作ることに重点を置いたツール」と「旅のしおりを作ることに重点を置いたツール」が存在する．\\
-　1つ目の「観光スケジュールを作ることに重点を置いたツール」とは観光スポットや飲食店等をツールの内で検索し，自分の行きたい観光スポット等をスケジュールに組み込んで作っていくというものである．この例として「ポケたび」という旅行の計画を「旅のしおり」として作成・保存することができるツールがある．このツールでは旅行したい場所をエリアから選ぶまたは検索することで指定し，移動時間や滞在ホテルを指定することができる．また，このツールでは移動手段・時間は手動で入力する．\\
-　2つ目の「旅のしおりを作ることに重点を置いたツール」とは印刷すると修学旅行等で作るような冊子のしおりになるものである．こちらはしおりの外面のデザインや写真といったことも決められるツールが多い．この例として「旅のしおり工房」\cite{tripkobo}という旅計画をたて「自分だけのガイドブック」をしおりにして持っていくことができるツールがある．このツールは始めに表紙の画像やデザインを決め，次に旅のテーマ，日程表などを作成していくことで冊子のしおりのように作ることができる．また，このツールでは旅行予定の場所や移動手段・時間は手動で入力する．\\
-　上記の2つのツールは「観光スケジュールが作成できるか」「観光スポットが検索できるか」「移動手段・時間が表示されるか」「しおりのデザインが決定できるか」「マルチデバイスに対応しているか」の5つの観点で比較できると考えた．実際に比較を行った結果は表4.1のようになる．旅のしおり工房のマルチデバイス対応が△になっている理由は，携帯端末でも旅のしおり工房のWebページを開きしおりを作成することは可能であるが，PCと携帯端末でしおりの共有ができないためである．
+　1つ目の「観光スケジュールを作ることに重点を置いたツール」とは観光スポットや飲食店等をツールの内で検索し，自分の行きたい観光スポット等をスケジュールに組み込んで作成していくというものである．この例として「ポケたび」という旅行の計画を「旅のしおり」\cite{poketrip}として作成・保存することができるツールがある(図\ref{Ltoppoke})．このツールでは旅行したい場所をエリアから選ぶまたは検索することで指定し，移動時間や滞在ホテルを指定することができる．また，このツールでは移動手段・時間は手動で入力する．
+
+\begin{figure}[htpb]
+\begin{center}
+\includegraphics[scale=0.67]{toppoke.eps}
+\end{center}
+\caption{ポケたび}
+\label{Ltoppoke}
+\end{figure}
+
+2つ目の「旅のしおりを作ることに重点を置いたツール」とは印刷すると修学旅行等で作るような冊子のしおりになるものである．こちらはしおりの外面のデザインや写真といったことも決められるツールが多い．この例として「旅のしおり工房」\cite{tripkobo}という旅計画をたて「自分だけのガイドブック」をしおりにして持っていくことができるツールがある(図\ref{Ltopkobo})．このツールは始めに表紙の画像やデザインを決め，次に旅のテーマ，日程表などを作成していくことで冊子のしおりのように作ることができる．また，このツールでは旅行予定の場所や移動手段・時間は手動で入力する．
+
+\begin{figure}[htpb]
+\begin{center}
+\includegraphics[scale=0.67]{topkobo.eps}
+\end{center}
+\caption{旅のしおり工房}
+\label{Ltopkobo}
+\end{figure}
+
+上記の2つのツールは「観光スケジュールが作成できるか」「観光スポットが検索できるか」「移動手段・時間が表示されるか」「しおりのデザインが決定できるか」「マルチデバイスに対応しているか」の5つの観点で比較できると考えた．実際に比較を行った結果は表4.1のようになる．旅のしおり工房のマルチデバイス対応が△になっている理由は，携帯端末でも旅のしおり工房のWebページを開きしおりを作成することは可能であるが，PCと携帯端末でしおりの共有ができないためである．
+
+%\clearpage
 
 \begin{table}[htb]
 \begin{center}
@@ -231,9 +250,13 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 
 
 \section{旅行計画作成に関するアンケート}
-次に本学の学生，教員，事務員に対して旅行計画作成に関するアンケートを行った．52人にアンケートの回答を依頼したところ19人から回答があった．\\
+次に本学の学部4学生，大学院生，教員，事務員に対して旅行計画作成に関するアンケートを行った．52人にアンケートの回答を依頼したところ19人から回答があった．\\
+
+%\clearpage
 
 \subsection{回答者の属性}
+
+まず回答者の属性を知るために，年代，性別，職業を回答してもらった．\\
 回答者の年代の割合は20代が58\%，30代が16\%，40代が21\%，50代が5\%となった(図\ref{Lnendai})．
 
 \begin{figure}[htpb]
@@ -243,8 +266,6 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \caption{回答者の年代の割合}
 \label{Lnendai}
 \end{figure}
-
-\clearpage
 
 次に回答者における男性の割合は68\%，女性の割合は32\%となった(図\ref{Lgender})．
 
@@ -256,7 +277,7 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \label{Lgender}
 \end{figure}
 
-\clearpage
+%\clearpage
 
 最後に回答者における職業の割合は学生が63\%，教員が26\%，事務員が11\%となった(図\ref{Ljob})．
 
@@ -268,11 +289,15 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \label{Ljob}
 \end{figure}
 
-\clearpage
+%\clearpage
 
-\subsection{旅行の頻度と計画作成方法}
+\subsection{旅行の頻度}
 
-「1年間に出張(公務旅行を含む)は何回ほど行きますか」という質問に対して「4回以下」という回答が68\%を占めた(図\ref{Lsyutyo})．
+大学関係者がし得る旅行として「公務のついでの旅行」と「観光のみを目的とした旅行」があると考え，それらの旅行の頻度を回答してもらった．尚，学生にも公務旅行の質問をしているのは回答者が学部4年生以上であり，学会参加などで公務旅行をする機会もそれなりにあると判断したためである．\\
+　「1年間に出張(公務旅行を含む)は何回ほど行きますか」という質問に対して「0回〜1回」が26\%，「2回〜4回」が42\%，「5回〜7回」が21\%，「8回〜9回」が0\%，「10回以上」が11\%という結果が得られた(図\ref{Lsyutyo})．
+　学生のみの回答に注目すると「0回〜1回」が33\%，「2回〜4回」が58\%，「5回〜7回」が8\%であった．
+教員のみの回答に注目すると「5回〜7回」が60\%，「10回以上」が40\%であった
+．事務員のみの回答に注目すると「0回〜1回」が50\%，「2回〜4回」が50\%であった．
 
 \begin{figure}[htpb]
 \begin{center}
@@ -282,9 +307,13 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \label{Lsyutyo}
 \end{figure}
 
-\clearpage
+%\clearpage
 
-「仕事以外の旅行は1年間に何回ほど行きますか」という質問に対して「4回以下」という回答が84\%を占めた(図\ref{Lcryoko})．
+「仕事以外の旅行は1年間に何回ほど行きますか」という質問に対して「0回〜1回」が21\%，「2回〜4回」が63\%，「5回〜7回」が11\%，「8回〜9回」が0\%，「10回以上」が5\%という結果が得られた(図\ref{Lcryoko})．
+学生のみの回答に注目すると「0回〜1回」が25\%，「2回〜4回」が75\%であった．
+教員のみの回答に注目すると「0回〜1回」が20\%，「2回〜4回」が20\%，「5回〜7回」が40\%，「10回以上」が20\%であった．
+事務員のみの回答に注目すると「2回〜4回」という回答のみであった．
+
 
 \begin{figure}[htpb]
 \begin{center}
@@ -294,9 +323,12 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \label{Lcryoko}
 \end{figure}
 
-\clearpage
+%\clearpage
 
-「出張の旅行の際，空き時間等に観光することはありますか」という質問に対して「よくある」と「少しはある」という回答が82\%を占めた(図\ref{Lakitime})．
+「出張の旅行の際，空き時間等に観光することはありますか」という質問に対して「よくある」が29\%，「少しはある」が53\%，「あまりない」が6\%，「全くない」12\%という結果が得られた(図\ref{Lakitime})．
+学生のみの回答に注目すると「よくある」が33\%，「少しはある」が42\%，「あまりない」が8\%，「全くない」が17\%であった．
+教員のみの回答に注目すると「よくある」が20\%，「少しはある」が80\%であった．
+事務員のみの回答に注目すると「少しはある」という回答のみであった．
 
 \begin{figure}[htpb]
 \begin{center}
@@ -306,9 +338,13 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \label{Lakitime}
 \end{figure}
 
-\clearpage
+%\clearpage
 
-「出張の旅行の際によく使用するWebサイトを選択してください(複数回答可)」という質問に対して「航空会社のWebサイト(もしくはアプリ)」が最も多く13票，次点で「乗換案内サイト(ジョルダン，駅すぱあと，駅探等)」と「ルート検索サイト(Google Maps等)」が12票であった(図\ref{Lwebsyutyo})．
+
+\subsection{旅行計画の作成時に利用するWebサイト}
+
+旅行計画の作成時に利用するWebサイトを調べるために，公務旅行と観光のみを目的とする旅行に分けて回答してもらった．\\
+　「出張の旅行の際によく使用するWebサイトを選択してください(複数回答可)」という質問に対して「航空会社のWebサイト(もしくはアプリ)」が最も多く13票，次点で「乗換案内サイト(ジョルダン，駅すぱあと，駅探等)」と「ルート検索サイト(Google Maps等)」が12票であった(図\ref{Lwebsyutyo})．航空会社のWebサイトという回答が最も多かった理由としては，回答者が函館という地方都市に在住であるため，基本的に飛行機による移動が多くなるということが考えられる．乗り換え案内サイトやルート検索サイトが多かった理由としては出張のより旅行ではスケジュールをしっかり決めなくてはならずに，鉄道や目的地までかかる時間を細かく調べる機会が多いためと考えられる．
 
 \begin{figure}[htpb]
 \begin{center}
@@ -325,9 +361,10 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
  \item バス停検索サイト
  \item 出張先でググる
 \end{itemize}
-という回答があった．
+という回答があった．\\
+　
 
-\clearpage
+%\clearpage
 
 「観光のみの旅行の際によく使用するWebサイトを選択してください(複数回答可)」という質問に対して「ホテル予約のサイト(楽天トラベル)」と「ルート検索サイト(Google Maps等)」が最も多く9票であった(図\ref{Lwebtrip})．
 
@@ -351,9 +388,9 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
  \item Facebookの口コミ
  \item (Webサイトではないが)ガイドブック
 \end{itemize}
-という回答があった．
+という回答があった．\\
 
-\clearpage
+%\clearpage
 
 「旅行計画を作成する際にオススメのWebサイトを教えてください」という質問に対しては
 \begin{itemize}
@@ -367,10 +404,11 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \end{itemize}
 という回答があった．
 
-\clearpage
+%\clearpage
 
-\subsection{旅行の記録方法}
+\subsection{旅行計画の記録方法}
 
+旅行計画の記録方法を答えてもらうための質問をした．計画を立てて記録する人には具体的な方法を，記録を立てない人にはその理由を回答してもらった．\\
 　「旅行前に旅行の計画を紙やファイルなどをどこかに記録するか」という質問に対して「計画を立てて記録する」が56\%，「計画を立てるが記録しない」が33\%，計画を立てないが11\%であった(図\ref{Lfilerecord})．
 
 \begin{figure}[htpb]
@@ -404,7 +442,8 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 
 \subsection{他人との共有方法}
 
-「旅行前に旅行の計画を誰かに話すか」という質問に対して「はい」は84\%「いいえ」は11\%「旅行の計画を立てない」が5\%であった(図\ref{Lbeforetalktrip})．\\
+旅行について他人と共有するかを旅行前と旅行後の2つの観点で回答してもらった．\\
+　「旅行前に旅行の計画を誰かに話すか」という質問に対して「はい」は84\%「いいえ」は11\%「旅行の計画を立てない」が5\%であった(図\ref{Lbeforetalktrip})．\\
 \begin{figure}[htpb]
 \begin{center}
 \includegraphics[scale=0.65]{beforetalktrip.eps}
@@ -433,7 +472,7 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
  \item 家族にテキストチャット(iMessage)で連絡
 \end{itemize}
 
-\clearpage
+%\clearpage
 
 「旅行後に旅行の計画を誰かに話すか」という質問に対して「はい」は32\%「いいえ」は63\%「旅行の計画を立てない」が5\%であった(図\ref{Laftertalktrip})．
 
@@ -463,7 +502,7 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 
 「旅行の計画を立てることをどう思うか(複数回答可)」という質問に対して，「楽しい」という回答が最も多く次点で「面倒」「わくわくする」「自分で立てたい」が続いた(図\ref{Lhowthinktrip})．
 
-\clearpage
+%\clearpage
 
 \begin{figure}[htpb]
 \begin{center}
@@ -480,8 +519,9 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \section{考察}
 調査によって既存の旅のしおりには観光スポットまたは移動時間を手動で入力するものや移動手段を考慮せずに目的地をリスト的に表示するものが多いという問題点があることがわかった．そのため移動手段・時間を自動的に表示することでより作成するツールの利便性が高まると考えられる．
 また，今回比較に使用した「観光スケジュールの作成」「観光スポットの検索」「移動手段・時間の自動表示」「しおりのデザインの決定」「マルチデバイス対応」の5つの観点のうち，全てではなくてもいくつか満たされていることで「旅のしおり」になるということが考えられる．そのため，開発するツールでは可能な限りこれら5つの観点は盛り込まれているべきであると考える．\\
-　次にアンケート結果によって出張等の空き時間に観光する人が多いとわかった．これよりそれほど多くない空いた時間に素早く計画を立てることができる工夫があると，より利便性が高まると考えられる．出張の旅行と観光の旅行では使用するWebサイトに若干の違いが見られた．出張において航空会社のWebサイトが多く使用されているのは回答者が函館という地方都市に在住していることも影響していると考えられる．ルート検索サイトはどちらの場合でも使用している人が多いとわかった．これは馴染みの薄い土地に行く際には多くの人がルート案内サイトを使って経路を調べているからであると考えられる．観光による旅行では公式の観光情報サイトや特産品のサイトでより詳しい情報を得ようとしたり，レンタカーのサイトで移動手段を確保する人もいるとわかった．行きたい土地の観光スポットがまとまっているサイトを利用しているという回答もあった．これは多くの選択肢の中から自分の行きたい場所を選ぶことができるため，様々なサイトを移動する必要がないと考えられる．こういった選択の幅を広げる工夫は開発するツールでも取り入れるべきである．旅行計画の記録に関しては計画自体を立てる人は約9割であったが，記録までする人は約5割であった．記録しない人の考えとして，面倒ということやその場で考えるという回答があった．面倒という感情については後ほど詳しく考察する．
-複数人で行く場合は同伴者に事前に話す人が84\%であった．伝える方法としては口頭やメールなどが多いため，旅のしおり作成ツールによって他人とも共有できることで，利便性が高まると考えられる．旅行後はスケジュールを話すのではなく，旅行の経験や体験をお土産話として友人などに伝えるという回答があった．そのため，開発するツールではスケジュールを立てることだけを支援するのではなく，旅行の想い出を残す機能も必要であると考えられる．最後に旅行計画を立てることに関しては「楽しい」という回答と「面倒」という回答が多かった．「楽しい」という感情に寒鴉してはこれから行く旅行のことをあれこれ考えながら計画を立てることを楽しんでいると考えられる．逆に面倒と感じる要因としては自分の必要としている情報がなかなか手に入らないことや，細かく記録を残すことを億劫に思う感情があると考えられる．よって開発するツールには面倒さを解消することと，楽しさを感じることができる要素が必要である．どのような場面で楽しさを感じているかということはこのアンケート結果だけでは不確かであったため，更に詳しく調べる必要があると考えられる．
+　次にアンケート結果によって出張等の空き時間に観光する人が多いとわかった．これよりそれほど多くない空いた時間に素早く計画を立てることができる工夫があると，より利便性が高まると考えられる．出張の旅行と観光の旅行では使用するWebサイトに若干の違いが見られた．観光のみの旅行での総回答数が公務旅行の総回答数を下回っているのは．公務旅行の場合は公務の時間などが決まっておりその時間に合わせてスケジュールをしっかり立てなければならないのに対して，観光のみの旅行では多少の時間のずれは本人達次第でどのようにでもカバーできるため，しっかりと予定を立てる人が減少していることが考えられる．
+ルート検索サイトはどちらの場合でも使用している人が多いとわかった．これは馴染みの薄い土地に行く際には多くの人がルート案内サイトを使って経路を調べているからであると考えられる．観光による旅行では公式の観光情報サイトや特産品のサイトでより詳しい情報を得ようとしたり，レンタカーのサイトで移動手段を確保する人もいるとわかった．行きたい土地の観光スポットがまとまっているサイトを利用しているという回答もあった．これは多くの選択肢の中から自分の行きたい場所を選ぶことができるため，様々なサイトを移動する必要がないと考えられる．こういった選択の幅を広げる工夫は開発するツールでも取り入れるべきである．旅行計画の記録に関しては計画自体を立てる人は約9割であったが，記録までする人は約5割であった．記録しない人の考えとして，面倒ということやその場で考えるという回答があった．面倒という感情については後ほど詳しく考察する．
+複数人で行く場合は事前に話す人が84\%であった．伝える方法としては口頭やメールなどが多いため，旅のしおり作成ツールによって他人とも共有できることで，利便性が高まると考えられる．旅行後はスケジュールを話すのではなく，旅行の経験や体験をお土産話として友人などに伝えるという回答があった．そのため，開発するツールではスケジュールを立てることだけを支援するのではなく，旅行の思い出を残す機能も必要であると考えられる．最後に旅行計画を立てることに関しては「楽しい」という回答と「面倒」という回答が多かった．「楽しい」という感情に関してはこれから行く旅行のことをあれこれ考えながら計画を立てることを楽しんでいると考えられる．逆に面倒と感じる要因としては自分の必要としている情報がなかなか手に入らないことや，細かく記録を残すことを億劫に思う感情があると考えられる．よって開発するツールには面倒さを解消することと，楽しさを感じることができる要素が必要である．どのような場面で楽しさを感じているかということはこのアンケート結果だけでは不確かであったため，更に詳しく調べる必要があると考えられる．
 
 
 %--------------------------------------------------------------------
@@ -489,13 +529,13 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 ツールを作成するうえで必要になる機能，特に「楽しさ」という観点で見た場合にどのような要素が必要になるかということや，どのような場面でユーザは「楽しさ」を感じているかということを調べるために予備実験を行った．
 
 \section{実験計画}
-この予備実験を計画する際に本学の認知科学に詳しい教員にアドバイスをいただいた．その内容は「被験者は1名ではなく2名で行ってもらい，その2名も可能であれば実際に旅行に行くような間柄の関係の人にすべき」，「複数の案から選択できるような形式にする」，「被験者の発言内容，表情，口調などから読み取れることがある」というものであった．そこで予備実験の方法として，被験者2名ずつペアになってもらい，こちらが数パターン用意した旅行計画の概要の中から行きたいというものを選んでもらう．また既存のツールを用いて実際に旅行計画を立ててもらうものである(図5.1)．
+この予備実験を計画する際に本学の認知科学に詳しい教員にアドバイスをいただいた．その内容は「被験者は1名ではなく2名で行ってもらい，その2名も可能であれば実際に旅行に行くような間柄の関係の人にすべき」，「複数の案から選択できるような形式にする」，「被験者の発言内容，表情，口調などから読み取れることがある」というものであった．そこで予備実験の方法として，被験者2名ずつペアになってもらい，こちらが数パターン用意した旅行計画の概要の中から行きたいというものを選んでもらう．また既存のツールを用いて実際に旅行計画を立ててもらうものである(図\ref{Lsemiexp})．
 \begin{figure}[htpb]
 \begin{center}
-%\includegraphics[width=4cm, height=2cm]{filerecord.eps}
 \includegraphics[scale=0.4]{semiexp.eps}
 \end{center}
 \caption{予備実験イメージ}
+\label{Lsemiexp}
 \end{figure}
 
 
@@ -505,20 +545,20 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 実験中は画面をと音声を収録した．また終了後にインタビューを実施した．
 
 \section{実験結果}
-まず被験者はどこに行くかを決めるための話し合いを始めた．実験の様子は図5.2の通りである．
+まず被験者はどこに行くかを決めるための話し合いを始めた．実験の様子は図\ref{Lexpfoto}の通りである．
 
 \begin{figure}[htpb]
 \begin{center}
-%\includegraphics[width=4cm, height=2cm]{filerecord.eps}
 \includegraphics[scale=0.09]{expfoto.eps}
-\caption{予備実験の様子}
 \end{center}
+\caption{予備実験の様子}
+\label{Lsepfoto}
 \end{figure}
 
 
 最初にユニバーサル・スタジオ・ジャパン(以下USJ)に行きたいと話し合い，USJの場所を調べ始めた．その際USJの公式Webサイトを使用していた．しかし，最初から候補を絞りすぎるのはよくないと考え箱根や沖縄といった地名をあげていった．少しの話し合いの後にとりあえず，ポケたびのお気に入り機能を使って気になる観光スポットを登録する作業を始めた．まずは大阪のおすすめ観光スポットを紹介しているWebサイトを調べた．そこで，USJ，海遊館，天保アニパ，天王寺動物園という観光スポットの候補を発見した．被験者にとってUSJと海遊館は馴染みのある場所であったが，天保アニパと天王寺動物園については詳しく知らなかったため，その2つの観光スポットについてWebサイトで詳しく調べ始めた．またその際に海遊館の詳しい場所も海遊館のWebサイトにて調べていた．海遊館などをお気に入りに指定する際にポケたびの検索機能を用いてスポットを探していた．
 次に大阪のグルメについて，グルメ情報サイトで調べ始めた．その際，先ほどと同じようにポケたびのお気に入り機能を使用して行きたい思った候補地を記録していた．次におおよそ大阪近辺を観光することが決まったため，大阪府内での交通手段を調べ始めた，その際，乗り換え案内のサイトなどを利用して交通手段を調べていた．その後，滞在するホテルを宿泊料金を比較できるサイトにて調べていた．場所や料金の適するホテルを見つけ，そのホテルのサイトにて詳細を調べていた．飛行機の時間や料金などはこの段階で調査をしていた．その際，函館空港と伊丹空港のWebページを参照していた．また伊丹空港からの交通手段を乗り換え案内サイト等を使用して調べていた．
-それが終わると旅のしおり作成を開始した．旅のしおりを作成する際にはそれまでにお気に入りに入れたスポットを参照しながら，しおりを丁寧に作成し始めた．作成開始当初は場所の指定や手動で場所を入力する方法に戸惑っている様子が見られた．飛行機や列車の時間を記入する際は調べる段階で開いておいたWebサイトを見返したり，必要に応じて新しく調べたりしていた．また，ホテルの場所や食事の場所も先ほど調べた情報を参照したり，新しく調べたりして記入していた．実験中にポケ旅では日を跨いで予定を記入することができないとわかった．
+それが終わると旅のしおり作成を開始した．旅のしおりを作成する際にはそれまでにお気に入りに入れたスポットを参照しながら，しおりを丁寧に作成し始めた．作成開始当初は場所の指定や手動で場所を入力する方法に戸惑っている様子が見られた．飛行機や鉄道の時間を記入する際は調べる段階で開いておいたWebサイトを見返したり，必要に応じて新しく調べたりしていた．また，ホテルの場所や食事の場所も先ほど調べた情報を参照したり，新しく調べたりして記入していた．実験中にポケ旅では日を跨いで予定を記入することができないとわかった．
 最後にインタビューを実施し，今回の実験の感想などを聞いた．被験者が使用したWebサイト一覧を以下に示す．
 \begin{itemize}
  \item 各観光スポットの公式Webサイト
@@ -530,40 +570,40 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \end{itemize}
 
 
-また実際に被験者が作成した旅のしおりを以下に示す．(図5.2)，(図5.3)，(図5.4)
+また実際に被験者が作成した旅のしおりを以下に示す．実験では2泊3日の旅行を想定したしおりを作成したてもらったため，図\ref{Lshiori1}は1日目，図\ref{Lshiori2}は2日目，図\ref{Lshiori3}は3日目のしおりを示している．
 
 \begin{figure}[htpb]
 \begin{center}
-%\includegraphics[width=4cm, height=2cm]{filerecord.eps}
 \includegraphics[scale=0.7]{shiori1.eps}
+\end{center}
 \caption{実験で被験者が作成したしおり(1/3)}
-\end{center}
+\label{Lshiori1}
 \end{figure}
 
 \begin{figure}[htpb]
 \begin{center}
-%\includegraphics[width=4cm, height=2cm]{filerecord.eps}
 \includegraphics[scale=0.7]{shiori2.eps}
-\caption{実験で被験者が作成したしおり(2/3)}
 \end{center}
+\caption{実験で被験者が作成したしおり(2/3)}
+\label{Lshiori2}
 \end{figure}
 
 \begin{figure}[htpb]
 \begin{center}
-%\includegraphics[width=4cm, height=2cm]{filerecord.eps}
 \includegraphics[scale=0.7]{shiori3.eps}
-\caption{実験で被験者が作成したしおり(3/3)}
 \end{center}
+\caption{実験で被験者が作成したしおり(3/3)}
+\label{Lshiori3}
 \end{figure}
 
-\clearpage
+%\clearpage
 
-　被験者の表情の観察から，行き先を決めるために様々な場所を候補地として探している時間が楽しそうにしていた．被験者は1時間かけて旅のしおりを作成した．1時間の内訳は始めの30分を目的地を決める時間に使用し，残りの30分間を旅のしおりを作成する時間に使用していた．作成したしおりを見ると初日のしおりは丁寧に作成しているが，3日目のしおりは雑になりがちである．またアイコンの誤使用も見受けられる．移動時間に関して，飛行機は便数が少ないこともあり，しっかり記入していたが列車やバスは時間自体は調べていたものの，詳細に記述する必要がないと判断したのか大まかな時間しか記載されていない．\\
+被験者の表情の観察から，行き先を決めるために様々な場所を候補地として探している時間が楽しそうにしていた．被験者は1時間かけて旅のしおりを作成した．1時間の内訳は始めの30分を目的地を決める時間に使用し，残りの30分間を旅のしおりを作成する時間に使用していた．作成したしおりを見ると初日のしおりは丁寧に作成しているが，3日目のしおりは雑になりがちである．またアイコンの誤使用も見受けられる．移動時間に関して，飛行機は便数が少ないこともあり，しっかり記入していたが鉄道やバスは時間自体は調べていたものの，詳細に記述する必要がないと判断したのか大まかな時間しか記載されていない．\\
 　実験後のインタビューでは旅行計画を作成することと使用したツールについて聞いた．旅行計画を作成することで「自分が行きたい場所のことを考えるのは楽しい」「実際に旅行する場面を思い描きながら作成できて良かった」などの意見があった．また「しおりという形に残るものがあると，より楽しさが深まりそう」という意見もあり，これは開発するツールに取り入れるべき意見であった．\\
 　使用したツールに関してはポケたびを利用して気になった点を挙げてもらった．具体的には「ブラウザの戻るボタンを押すのではなく，ポケたび内の戻るボタンを押さなくてはならない」「アイコンではなく右のチェックマークをクリックする必要があるが，アイコンをクリックしてしまう．」などがあった．良かった点としては「観光スポットを検索できる」「お気に入り機能がある．」などがあった．またあったら良いと思う機能としては「移動時間や・手段を自動で表示する」「目的地の経路を表示する」ということがあった．
 
 \section{考察}
-まずしおりを作成する最終段階で面倒そうな様子が見られたが，その理由としてポケたびの使用に慣れていないことやアイコンの使い方のわかりにくさ，しおり作成の段階で以前調べたWebサイトをもう一度見たり調べ直したりしなければならないことなどが考えられる．その面倒さは移動手段・時間が自動で表示されることである程度解決されると考えられる．被験者が最も楽しさを感じている場面は，実験中の様子から見て目的地を決めるために，観光スポットを検索している時間であった．この際には旅行の詳細は決まっておらずあそこにも行きたいここにも行きたいという想像が膨らんでいる様子であった．そのため，この楽しさを損なわないために観光スポットに関してはより多くの情報を提示し選択の幅を広げる必要があると考えられる．
+しおりを作成する最終段階で面倒そうな様子が見られたが，その理由としてポケたびの使用に慣れていないことやアイコンの使い方のわかりにくさ，しおり作成の段階で以前調べたWebサイトをもう一度見たり調べ直したりしなければならないことなどが考えられる．その面倒さは移動手段・時間が自動で表示されることである程度解決されると考えられる．被験者が最も楽しさを感じている場面は，実験中の様子から見て目的地を決めるために，観光スポットを検索している時間であった．この際には旅行の詳細は決まっておらずあそこにも行きたいここにも行きたいという想像が膨らんでいる様子であった．そのため，この楽しさを損なわないために観光スポットに関してはより多くの情報を提示し選択の幅を広げる必要があると考えられる．
 次にしおりを作成する際には，まずは大まかな場所，今回の実験で言う大阪近辺を決定しその旅行でメインとなる観光スポットと，時間の制約のある中で他にも行ける場所がないか探す，そして移動手段・時間を調べたりグルメ情報を調べたりする，という順番があることがわかった．しおりを作成する全ての人がこの順で作成するわけではないだろうが，開発するツールでの手順の提示の参考とすべきであった．
 被験者はおすすめ観光スポットを紹介するWebサイトやグルメ情報サイトをよく使用していた．これは明確に行きたい場所がUSJのみであったため，その近辺にある観光スポットを探すために使用していた．グルメ情報サイトに関しては具体的にどのお店で食事をしたいということが決まっていないことと，大阪のグルメに詳しくないことがあり，使用していたと考えられる．開発するツールでは例えば「大阪府のおすすめ観光スポット」のようにユーザから検索をかけて調べるだけでなく，ある程度地域などを絞った情報を提示べきであると考えられる．
 「ポケたび」の良くなかった点としてUIの面で誤認識をしてしまうことと戻るに関することがあった．特に図\ref{Lgoicon}のようなその時間に何をするか一目でわかりやすくするアイコンを選択する画面において，選択する際には右側のラジオボタンを選択しなければならないが，右側のアイコン自体を誤選択してします場面が見受けられた．また保存をしていない状態でブラウザの戻るを押すと変更が保存されずにページが遷移してしまう．これを防ぐにはポケたび内で「←」のボタンが押す必要があるが，これを見落としがちであった．
@@ -571,7 +611,7 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 \begin{center}
 \includegraphics[scale=0.7]{goicon.eps}
 \end{center}
-\caption{実験で被験者が作成したしおり(2/3)}
+\caption{ポケたびでのアイコン選択画面}
 \label{Lgoicon}
 \end{figure}
 
@@ -580,19 +620,46 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 %--------------------------------------------------------------------
 \chapter{作成するツール}% 6章のタイトル
 
-現時点ではツールの構成イメージとしてAPI等を用いて地図や乗り換え案内，ルート検索などのツールと組み合わせ移動手段・時間を表示する(図6.1)．
+ツールの構成イメージとしてAPI等を用いて地図や乗り換え案内，ルート検索などのツールと組み合わせ移動手段・時間を表示する(図\ref{Ltoolimg})．
 \begin{figure}[htpb]
 \begin{center}
-%\includegraphics[width=4cm, height=2cm]{filerecord.eps}
 \includegraphics[scale=0.4]{willmaketools2.eps}
 \end{center}
 \caption{作成ツールイメージ}
+\label{Ltoolimg}
 \end{figure}
 
-最終版では加筆します．
+具体的には楽しさの向上と効率性の向上に関して支援する機能を実装する．
+
+\section{効率性の向上}
+効率性を向上させるために以下の機能を実装する．
+\begin{itemize}
+ \item 移動手段・時間の自動表示
+ \item 観光スポットの検索
+ \item しおりデザインの決定
+ \item マルチデバイス対応
+ \item 観光スポット登録
+  \item SNS投稿
+\end{itemize}
+%順番
+
+また作成するツールでは以下のAPIを組み合わせて開発する．
+\begin{itemize}
+ \item 乗り換え案内
+ \item 地図
+ \item 観光スポット
+ \item グルメ情報
+\end{itemize}
+
+\section{楽しさの向上}
+楽しさについては旅行計画作成時，旅行中，旅行後に楽しさを感じることができる場面があると考えられる．旅行計画作成時の楽しさについては多くの選択肢を提示できる工夫をする．具体的には乗り換え案内情報を1つだけではなく複数提示する，観光スポット，グルメ情報のおすすめを表示するなどである．
+旅行中の楽しさについては写真を記録できるようにする，メモを残せるようにするなどして旅行中の記録や思い出を残すことができるような工夫をする．%行く予定のなかった場所にいけてよかった
+旅行後の楽しさについてはアンケートの結果より誰かに話す人が多いため，友人などにお土産話をする際の手助けとなるようにすべきである．これに関しては作成したしおりをなんらかの形で出力する，スライドショー形式で閲覧できるようにするなどが考えられる．
+旅行中と旅行後の楽しさに関してはより詳細に検討する必要がある．
+
 
 %--------------------------------------------------------------------
-\chapter{結論と今後の展開}% 7章のタイトル
+\chapter{まとめと今後の展開}% 7章のタイトル
 
 \section{まとめ}
 
@@ -601,7 +668,7 @@ Travel, making schedule, Traveler's Notebook, moving transportation, moving time
 
 
 \section{今後の展開}
-今後加筆します．
+直近で行うこととしてはツールの実装である．ある程度まで実装が進め，評価実験を行う．その際意見などをいただき結果をツールに反映させていきたいと考えている．
 　%今後はユーザが旅のしおりを作成するうえで「楽しさ」を感じてもらうためにはどのようなことが必要になるかということや，そのことを踏まえて必要機能の検討とツールの設計，実装を行う．
 
 
