まとめを加筆

--- a/sample.tex
+++ b/sample.tex
@@ -57,26 +57,33 @@ and tries to support the combination of existing tools displaying destination, a
 
 % 英文キーワード(5個程度をコンマ(,)で区切って羅列する)
 \begin{ekeyword}
-Travel, Making schedule, Traveler's Notebook, Moving transportation, Moving time
+Travel, Making Schedule, Traveler's Notebook, Moving Transportation, Moving Time
 \end{ekeyword}
 
 %--------------------------------------------------------------------
 % 和文概要(400字程度)
 \begin{jabstract}
+%効率的な観光スケジュール作成を支援するために，移動手段・時間を考慮した旅のしおりの作成を試みる．
+%個人旅行者が観光スケジュールを作成することは難しい．
+%その理由として移動手段・時間を把握しにくいということ，旅行に必要な情報を様々な場所から探す必要があること，視覚的にわかりやすく作成しにくい，などが挙げられる．
+%それらを行いやすくするための手段の1つとして，旅のしおり作成ツールが存在する．
+%しかし既存の旅のしおり作成ツールは移動手段・時間を考慮せず，観光スポットや移動手段・時間を手動で入力するものが多い．
+%そこで目的地を表示するだけでなく，目的地間の移動手段・時間を旅のしおりに組み込むことで効率的な観光スケジュール作成の支援が可能になると考えた．
+%また旅行計画中や旅行後の振り返り時の楽しさも考慮する．
+%本研究では既存のツールを組み合わせることで目的地を表示すること，目的地間の移動手段・時間を目的地のリストに加えることの他，旅行をより楽しむことの支援を試みる．
+
 効率的な観光スケジュール作成を支援するために，移動手段・時間を考慮した旅のしおりの作成を試みる．
-個人旅行者が観光スケジュールを作成することは難しい．
-その理由として移動手段・時間を把握しにくいということ，旅行に必要な情報を様々な場所から探す必要があること，視覚的にわかりやすく作成しにくい，などが挙げられる．
-それらを行いやすくするための手段の1つとして，旅のしおり作成ツールが存在する．
-しかし既存の旅のしおり作成ツールは移動手段・時間を考慮せず，観光スポットや移動手段・時間を手動で入力するものが多い．
-そこで目的地を表示するだけでなく，目的地間の移動手段・時間を旅のしおりに組み込むことで効率的な観光スケジュール作成の支援が可能になると考えた．
-また旅行計画中や旅行後の振り返り時の楽しさも考慮する．
-本研究では既存のツールを組み合わせることで目的地を表示すること，目的地間の移動手段・時間を目的地のリストに加えることの他，旅行をより楽しむことの支援を試みる．
+既存の旅のしおりの調査や旅行計画に対する考え方を知るためにアンケート調査を行ったところ，移動手段・時間を考慮せず，観光スポットや移動手段・時間を手動で入力することや，旅行計画の作成について「楽しい」「面倒」と考える人が多いことが分かった．
+そこで目的地を表示するだけでなく，目的地間の移動手段・時間を自動的に表示することで効率的な観光スケジュール作成の支援が可能になると考えた．
+ツールを作成するうえで必要になる機能を知るために予備実験を行ったところ，必要となる機能や楽しさを感じる場面が分かった．よって旅行計画の作成中，旅行中，旅行後の振り返り時の楽しさの向上も考慮する．
+そこで本研究では既存のツールを組み合わせることで目的地を表示すること，目的地間の移動手段・時間を自動的に表示することの他，旅行をより楽しむことの支援を試みる．
+
 
 \end{jabstract}
 
 % 和文キーワード(5個程度をコンマ(,)で区切って羅列する)
 \begin{jkeyword}
-観光, スケジュール作成, 旅のしおり, 移動時間, 移動手段
+観光, スケジュール作成, 旅のしおり, 移動手段, 移動時間
 \end{jkeyword}
 
 %--------------------------------------------------------------------
@@ -96,7 +103,7 @@ Travel, Making schedule, Traveler's Notebook, Moving transportation, Moving time
 
 \begin{figure}[htpb]
 \begin{center}
-\includegraphics[scale=0.55]{kokunaitrip.eps}
+\includegraphics[scale=0.54]{kokunaitrip.eps}
 \end{center}
 \caption{日本人の国内宿泊観光・レクリエーションにおける延べ旅行者数の推移および伸び率}
 \label{kokunai}
@@ -663,12 +670,18 @@ Travel, Making schedule, Traveler's Notebook, Moving transportation, Moving time
 
 \section{まとめ}
 
-本研究ではツールを組み合わせ，移動手段・時間を考慮した旅のしおりによる観光スケジュール支援を行う．現段階では既存のツールと旅行計画作成の考え方の調査を行い，既存の旅のしおり作成ツールは移動手段・時間を考慮していないこと，旅行計画を立てる人の割合が多いこと，旅行計画作成について「楽しい」「面倒」と考える人が多いことがわかった．\\
-
+効率的な観光スケジュール作成を支援するために，移動手段・時間を考慮した旅のしおりの作成を試みる．
+背景として日本人の国内旅行者や旅行業者が減少しており，ツアー旅行より個人での旅行が多くなることが挙げられる．
+問題点として個人旅行者が観光スケジュールを作成することは難しいことが挙げられる．その理由として移動手段・時間を把握しにくいということ，旅行に必要な情報を様々な場所から探す必要があること，視覚的にわかりやすく作成しにくい，などが挙げられる．
+それらを行いやすくするための手段の1つとして，旅のしおり作成ツールが存在する．
+既存の旅のしおりの調査や旅行計画に対する考え方を知るためにアンケート調査を行ったところ，移動手段・時間を考慮せず，観光スポットや移動手段・時間を手動で入力することや，旅行計画の作成について「楽しい」「面倒」と考える人が多いことが分かった．
+そこで目的地を表示するだけでなく，目的地間の移動手段・時間を自動的に表示することで効率的な観光スケジュール作成の支援が可能になると考えた．
+ツールを作成するうえで必要になる機能を知るために予備実験を行ったところ，必要となる機能や楽しさを感じる場面が分かった．よって旅行計画の作成中，旅行中，旅行後の振り返り時の楽しさの向上も考慮する．
+そこで本研究では既存のツールを組み合わせることで目的地を表示すること，目的地間の移動手段・時間を自動的に表示することの他，旅行をより楽しむことの支援を試みる．また，観光情報学会第11回研究発表会とFOSE2015に参加し発表を行った．そこでは貴重なご意見をいただくことができた．
 
 
 \section{今後の展開}
-直近で行うこととしてはツールの実装である．ある程度まで実装が進め，評価実験を行う．その際意見などをいただき結果をツールに反映させていきたいと考えている．
+直近で行うこととしてはツールの実装である．ある程度まで実装を進め，評価実験を行う．その際意見などをいただき結果をツールに反映させていきたいと考えている．
 　%今後はユーザが旅のしおりを作成するうえで「楽しさ」を感じてもらうためにはどのようなことが必要になるかということや，そのことを踏まえて必要機能の検討とツールの設計，実装を行う．
 
 
