英文概要以外を加筆完了

--- a/sample.tex
+++ b/sample.tex
@@ -536,7 +536,7 @@ Travel, Making Schedule, Traveler's Notebook, Moving Transportation, Moving Time
 ツールを作成するうえで必要になる機能，特に「楽しさ」という観点で見た場合にどのような要素が必要になるかということや，どのような場面でユーザは「楽しさ」を感じているかということを調べるために予備実験を行った．
 
 \section{実験計画}
-この予備実験を計画する際に本学の認知科学に詳しい教員にアドバイスをいただいた．その内容は「被験者は1名ではなく2名で行ってもらい，その2名も可能であれば実際に旅行に行くような間柄の関係の人にすべき」，「複数の案から選択できるような形式にする」，「被験者の発言内容，表情，口調などから読み取れることがある」というものであった．そこで予備実験の方法として，被験者2名ずつペアになってもらい，こちらが数パターン用意した旅行計画の概要の中から行きたいというものを選んでもらう．また既存のツールを用いて実際に旅行計画を立ててもらうものである(図\ref{Lsemiexp})．
+この予備実験を計画する際に本学の認知科学に詳しい教員にアドバイスをもらった．その内容は「被験者は1名ではなく2名で行ってもらい，その2名も可能であれば実際に旅行に行くような間柄の関係の人にすべき」，「複数の案から選択できるような形式にする」，「被験者の発言内容，表情，口調などから読み取れることがある」というものであった．そこで予備実験の方法として，被験者2名ずつペアになってもらい，こちらが数パターン用意した旅行計画の概要の中から行きたいというものを選んでもらう．また既存のツールを用いて実際に旅行計画を立ててもらうものである(図\ref{Lsemiexp})．
 \begin{figure}[htpb]
 \begin{center}
 \includegraphics[scale=0.4]{semiexp.eps}
@@ -627,7 +627,7 @@ Travel, Making Schedule, Traveler's Notebook, Moving Transportation, Moving Time
 %--------------------------------------------------------------------
 \chapter{作成するツール}% 6章のタイトル
 
-ツールの構成イメージとしてAPI等を用いて地図や乗り換え案内，ルート検索などのツールと組み合わせ移動手段・時間を表示する(図\ref{Ltoolimg})．
+ツールの構成イメージ図は図\ref{Ltoolimg}の通りである．ツールではAPI等を用いて地図や乗り換え案内，ルート検索などのツールと組み合わせ移動手段・時間を表示する．
 \begin{figure}[htpb]
 \begin{center}
 \includegraphics[scale=0.4]{willmaketools2.eps}
@@ -649,19 +649,17 @@ Travel, Making Schedule, Traveler's Notebook, Moving Transportation, Moving Time
   \item SNS投稿
 \end{itemize}
 %順番
-
-また作成するツールでは以下のAPIを組み合わせて開発する．
-\begin{itemize}
- \item 乗り換え案内
- \item 地図
- \item 観光スポット
- \item グルメ情報
-\end{itemize}
+移動手段・時間の表示では乗り換え案内と地図のAPIを組み合わせ実現する．具体的にはある場所から次の場所に行くことを決めた場合に自動的に移動手段や時間を表示する．この際，短時間で行ける経路・方法を表示するだけではなく，複数の方法を提示する．時間がかかる手段でもあえて表示することでユーザの選択の幅を広げることを狙いとしている．
+観光スポットの検索では観光スポットのAPIとグルメ情報のAPIを用いてしおり内で観光スポット並びにグルメ情報を検索可能にする．これを実装することで検索エンジンで検索する手間を省く．表示される情報はスポットを事細かに説明するものではなく，概要程度で詳細は公式サイトに遷移して確認する形式にする．
+しおりのデザインの決定ではしおりとして外見のデザインまでこだわりたい人に対して，デザインを選べるまたは自作することでより思い入れの深いしおりになると考える．また，この作成したしおりを印刷できるようにすることで形に残すということも考慮中である．
+マルチデバイス対応では旅行に行く前にPCで作成した旅のしおりを旅行中はスマートフォンやタブレット端末で見ることができるようにすることで，計画を見返しやすくなる他に旅行中の記録に役立てたり旅行後のお土産話の手助けになると考えている．
+観光スポット登録では旅行の計画を立てる際に行きたい候補地を記録することで，候補を絞る段階で再度探す手間を省くことや，今回の旅行では行けないが次回旅行する場合は行きたいといったことを覚えておくことに役立つと考える．
+SNS投稿では旅行の計画や旅行の記録ということをより多くの人に共有することが可能になる．それを見た別のユーザが参考にしたり，投稿者に対してアドバイスや意見がもらえるというメリットも考えられる．
 
 \section{楽しさの向上}
-楽しさについては旅行計画作成時，旅行中，旅行後に楽しさを感じることができる場面があると考えられる．旅行計画作成時の楽しさについては多くの選択肢を提示できる工夫をする．具体的には乗り換え案内情報を1つだけではなく複数提示する，観光スポット，グルメ情報のおすすめを表示するなどである．
-旅行中の楽しさについては写真を記録できるようにする，メモを残せるようにするなどして旅行中の記録や思い出を残すことができるような工夫をする．%行く予定のなかった場所にいけてよかった
-旅行後の楽しさについてはアンケートの結果より誰かに話す人が多いため，友人などにお土産話をする際の手助けとなるようにすべきである．これに関しては作成したしおりをなんらかの形で出力する，スライドショー形式で閲覧できるようにするなどが考えられる．
+楽しさについては旅行計画作成時，旅行中，旅行後に楽しさを感じることができる場面があると考えられる．旅行計画作成時の楽しさについては多くの選択肢を提示できる工夫をする．具体的には乗り換え案内情報を1つだけではなく複数提示することや，観光スポット，グルメ情報のおすすめを表示するなどである．
+旅行中の楽しさについては写真を記録できるようにする，メモを残せるようにするなどして旅行中の記録や思い出を残すことができるような工夫をする．少し時間が空いたため，行く予定のなかった場所に行きたい場合におすすめするような工夫も考慮する．
+旅行後の楽しさについてはアンケートの結果より誰かに話す人が多いため，友人などにお土産話をする際の手助けとなるようにすべきである．これに関しては作成したしおりを何らかの形で出力する，スライドショー形式で閲覧できるようにする，SNSに投稿できるようにするなどが考えられる．
 旅行中と旅行後の楽しさに関してはより詳細に検討する必要がある．
 
 
